--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: KaD action test
 
 # Controls when the workflow will run
 on:
@@ -27,10 +27,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello from Daniel!
+        run: echo Hello from Daniel! >> ~/Desktop/hello.txt
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Add other actions to build, >> ~/Desktop/hello.txt
+          echo test, and deploy your project. >> ~/Desktop/hello.txt
